--- a/src/app/sensors/sensors.component.html
+++ b/src/app/sensors/sensors.component.html
@@ -1,4 +1,4 @@
-<h1> Sensors :</h1>
-<div>
+<div class="jumbotron">
+    <h1 class="text-center"> Sensors:</h1>
     <app-sensor *ngFor="let sensor of sensors" [sensor]="sensor"></app-sensor>
 </div>
