--- a/src/app/reading/reading.component.html
+++ b/src/app/reading/reading.component.html
@@ -1,7 +1,3 @@
-<!-- <p>TIMESTAMP:{{this.reading.timestamp}} RESULT:{{this.reading.result}}</p>
-<p *ngIf="this.reading.processing_result">
-    PROCESSED:{{this.reading.processing_result}}
-</p> -->
 <div class="container">
 <div class="row">
     <div class="col">
@@ -11,8 +7,9 @@
         {{this.reading.result}}
     </div>
     <div *ngIf="this.reading.processing_result" class="col">
-        {{this.reading.processing_result}}
+        {{this.reading.a}}x+{{this.reading.b}}={{this.reading.processing_result}}
     </div>
 </div>
 </div>
+<hr>
 
